[gd_scene load_steps=5 format=3 uid="uid://b3d1xeh8kjd8j"]

[ext_resource type="Texture2D" uid="uid://cqf0dfi7hm1c1" path="res://Menu/Credit/Credit.png" id="1_jw2my"]
[ext_resource type="Script" path="res://Menu/Credit/Credit.gd" id="2_hsrpt"]

[sub_resource type="Gradient" id="Gradient_04l1v"]
offsets = PackedFloat32Array(0.973958, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ki05q"]
gradient = SubResource("Gradient_04l1v")
width = 56
height = 56
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Credit" type="TextureButton"]
offset_right = 256.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_jw2my")
script = ExtResource("2_hsrpt")
background_color = null
author_scale = null
author_offset = null
name_scale = null

[node name="ClipMask" type="TextureRect" parent="."]
show_behind_parent = true
clip_children = 1
clip_contents = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -28.0
offset_right = 60.0
offset_bottom = 28.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_ki05q")

[node name="Background" type="ColorRect" parent="ClipMask"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AuthorImage" type="TextureRect" parent="ClipMask"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(28, 28)
expand_mode = 1
stretch_mode = 4

[node name="AuthorName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -18.0
offset_right = -18.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(174, 18)
horizontal_alignment = 1
